--- a/Catalog1.html
+++ b/Catalog1.html
@@ -186,7 +186,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/skyscraper-8373617_640.jpg" alt="building"/>
+            <img src="./images/bread1.jpg" alt="building"/>
             <div class="card-body">
               <p class="card-text">Hyacinthoides is classified in the subfamily Scilloideae (now part of the family Asparagaceae, but formerly treated as a separate family, called Hyacinthaceae), alongside genera such as Scilla and Ornithogalum.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -201,7 +201,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/daisy.jpg" alt="daisy"/>
+            <img src="./images/bread2.jpg" alt="daisy"/>
             <div class="card-body">
               <p class="card-text">Leucanthemum vulgare, commonly known as the ox-eye daisy, oxeye daisy, dog daisy, marguerite (French: Marguerite commune, "common marguerite") and other common names,[2] is a widespread flowering plant native to Europe and the temperate regions of Asia, and an introduced plant to North America, Australia and New Zealand.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -216,7 +216,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/rose.jpg" alt="rose"/>
+            <img src="./images/precut_wholewheat.jpg" alt="rose"/>
             <div class="card-body">
               <p class="card-text">A rose is either a woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears.</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -232,7 +232,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/sunflower.jpg" alt="sunflower" />
+            <img src="./images/Italian_Bread.jpg" alt="sunflower" />
             <div class="card-body">
               <p class="card-text">The common sunflower (Helianthus annuus) is a large annual forb of the genus Helianthus. It is commonly grown as a crop for its edible oily seeds</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -247,7 +247,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/tulip.jpg" alt="tulip"/>
+            <img src="./images/cin_Roll.jpg" alt="tulip"/>
             <div class="card-body">
               <p class="card-text">Tulips (Tulipa) are a genus of spring-blooming perennial herbaceous bulbiferous geophytes (having bulbs as storage organs). The flowers are usually large, showy and brightly coloured, generally red, pink, yellow, or white (usually in warm colours).</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -262,7 +262,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/lilipad.jpg" alt="lilipad">
+            <img src="./images/crossont.jpg" alt="lilipad">
             <div class="card-body">
               <p class="card-text">I belive this is a lilipad flower but I am unsure.</p>
               <div class="d-flex justify-content-between align-items-center">
