updating text that acopainys pictures:

--- a/authers.html
+++ b/authers.html
@@ -11,6 +11,10 @@
         <title>Catalog of bread and ...</title>
     
         <style>
+          p.centered{
+            text-align: center;
+          }
+
           .bd-placeholder-img {
             font-size: 1.125rem;
             text-anchor: middle;
@@ -123,6 +127,7 @@
   </header>
 
 <h1>ComS 319 - Construction of user interfaces</h1>
+<p1>September 13 2024</p1>
 <div class="container">
     <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
@@ -134,6 +139,7 @@
 
         </div>
     </div>
+    <p class="centered" >/n /n /n Instructor: Dr. Abraham N. Aldaco-Gastelum</p>
 </div>
 
     
