fixed grammer errors and removal of unneeded code

--- a/Catalog1.html
+++ b/Catalog1.html
@@ -12,34 +12,6 @@
     <title>Bread Catalog</title>
 
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        width: 100%;
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
 
       .bi {
         vertical-align: -.125em;
@@ -109,40 +81,6 @@
       </symbol>
     </svg>
 
-    <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-      <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
-              id="bd-theme"
-              type="button"
-              aria-expanded="false"
-              data-bs-toggle="dropdown"
-              aria-label="Toggle theme (auto)">
-        <svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
-        <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
-      </button>
-      <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
-        <li>
-          <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
-            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#sun-fill"></use></svg>
-            Light
-            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
-          </button>
-        </li>
-        <li>
-          <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
-            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#moon-stars-fill"></use></svg>
-            Dark
-            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
-          </button>
-        </li>
-        <li>
-          <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto" aria-pressed="true">
-            <svg class="bi me-2 opacity-50" width="1em" height="1em"><use href="#circle-half"></use></svg>
-            Auto
-            <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
-          </button>
-        </li>
-      </ul>
-    </div>
 
 <header data-bs-theme="dark">
     <div class="collapse text-bg-dark" id="navbarHeader">
@@ -184,14 +122,7 @@
           <div class="card shadow-sm">
             <img src="./images/banana_bread.jpg" alt="building"/>
             <div class="card-body">
-              <p class="card-text">Banana bread has a suddly sweet taste and the satisfying crunch from walnuts making it a good snake anyime. </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
+              <p class="card-text">Banana bread has a subtly sweet taste and the satisfying crunch from walnuts making it a good snack time.</p>
             </div>
           </div>
         </div>
@@ -199,14 +130,7 @@
           <div class="card shadow-sm">
             <img src="./images/bread2.jpg" alt="daisy"/>
             <div class="card-body">
-              <p class="card-text">French baggets provide a thin crispy crust with a chewy inside and an open croube.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
+              <p class="card-text">French baguettes provide a thin crispy crust with a chewy inside and an open crumb.</p>
             </div>
           </div>
         </div>
@@ -215,13 +139,6 @@
             <img src="./images/precut_wholewheat.jpg" alt="rose"/>
             <div class="card-body">
               <p class="card-text">this whole wheat bread has a rich taste while providing varies newtrients and fiber.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
             </div>
           </div>
         </div>
@@ -231,13 +148,6 @@
             <img src="./images/Italian_Bread.jpg" alt="sunflower" />
             <div class="card-body">
               <p class="card-text">Italian bread has a thin soft crust and a simple rustic taste.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
             </div>
           </div>
         </div>
@@ -245,14 +155,7 @@
           <div class="card shadow-sm">
             <img src="./images/cin_Roll.jpg" alt="tulip"/>
             <div class="card-body">
-              <p class="card-text">Cinamin rolls have a sticky and sweet bread in combination with a rich cinamin taste make it an un resistable treat.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
+              <p class="card-text">Cinnamon rolls have a sticky and sweet bread in combination with a rich cinnamon taste making it an irresistible treat.</p>
             </div>
           </div>
         </div>
@@ -260,14 +163,7 @@
           <div class="card shadow-sm">
             <img src="./images/crossont.jpg" alt="lilipad">
             <div class="card-body">
-              <p class="card-text">Crossonts are flacky and buttery making it a great treat by itself.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-body-secondary">9 mins</small>
-              </div>
+              <p class="card-text">Crossants are flaky and buttery making it a great treat by itself.</p>
             </div>
           </div>
         </div>
@@ -282,9 +178,6 @@
 <footer class="text-body-secondary py-5">
   <div class="container">
    
-    <p class="mb-1">Jacob Leary</p>
-    <p class="mb-0">Jackal@iastate.edu.</p>
-    <p>September 10th 2024</p>
   </div>
 </footer>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
