--- a/authers.html
+++ b/authers.html
@@ -97,9 +97,10 @@
       </div>
     </div>
   </header>
-
+<div class="container">
 <h1>ComS 319 - Construction of user interfaces</h1>
 <p1>September 13 2024</p1>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
