adding partners part

--- a/Catalog2.html
+++ b/Catalog2.html
@@ -102,7 +102,7 @@
       <div class="container">
         <a href="#" class="navbar-brand d-flex align-items-center">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-          <strong>Catalog of bread and Cake</strong>
+          <strong>Catalog of cake ...</strong>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -118,57 +118,57 @@
     <div class="container">
 
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
+        
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/banana_bread.jpg" alt="building"/>
+            <img src="./images/Cozy.jpeg" alt="building"/>
             <div class="card-body">
-              <p class="card-text">Banana bread has a subtly sweet taste and the satisfying crunch from walnuts making it a good snack time.</p>
+              <p class="card-text">This comforting cake is filled with grated carrots, walnuts, and raisins. The warm spices and sweet flavors make it a perfect treat for fall. The cake is topped with a creamy cream cheese frosting and a sprinkle of cinnamon.</p>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/bread2.jpg" alt="daisy"/>
+            <img src="./images/Vibrant.jpeg" alt="daisy"/>
             <div class="card-body">
-              <p class="card-text">French baguettes provide a thin crispy crust with a chewy inside and an open crumb.</p>
+              <p class="card-text">This classic cake is a beautiful red hue with a moist, velvety texture. The cake is frosted with a creamy cream cheese frosting and decorated with a sprinkle of edible glitter. The combination of flavors is sweet and tangy, making it a perfect dessert for any occasion.</p>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/precut_wholewheat.jpg" alt="rose"/>
+            <img src="./images/Tropical.jpeg" alt="rose"/>
             <div class="card-body">
-              <p class="card-text">this whole wheat bread has a rich taste while providing varies newtrients and fiber.</p>
+              <p class="card-text">This refreshing cake is perfect for a summer celebration. Layers of moist sponge cake are infused with pineapple and coconut, giving it a tropical flavor. The cake is frosted with a tangy passion fruit glaze and garnished with fresh mango slices.</p>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/Italian_Bread.jpg" alt="sunflower" />
+            <img src="./images/Elegant.jpeg" alt="sunflower" />
             <div class="card-body">
-              <p class="card-text">Italian bread has a thin soft crust and a simple rustic taste.</p>
+              <p class="card-text">This delicate cake is light and airy, with a soft, fluffy texture. The white chiffon cake is topped with a cloud-like meringue frosting and a scattering of fresh raspberries. The combination of flavors is refreshing and delightful.</p>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/cin_Roll.jpg" alt="tulip"/>
+            <img src="./images/Decadent.jpeg" alt="tulip"/>
             <div class="card-body">
-              <p class="card-text">Cinnamon rolls have a sticky and sweet bread in combination with a rich cinnamon taste making it an irresistible treat.</p>
+              <p class="card-text">This towering cake is a chocolate lover's dream. Layers of moist chocolate sponge cake are sandwiched together with a rich chocolate frosting. A drizzle of dark chocolate ganache adds a final touch of decadence. The cake is topped with a dusting of cocoa powder and a few chocolate shavings for a truly indulgent treat.</p>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="./images/crossont.jpg" alt="lilipad">
+            <img src="./images/Zesty.jpeg" alt="lilipad">
             <div class="card-body">
-              <p class="card-text">Crossants are flaky and buttery making it a great treat by itself.</p>
+              <p class="card-text">This rustic lemon cake is a burst of citrusy flavor. The moist sponge cake is infused with lemon zest and juice, giving it a tangy and sweet taste. The cake is topped with a lemon glaze and a sprinkle of fresh lemon zest for an extra zesty kick.</p>
             </div>
           </div>
         </div>
