--- a/Catalog1.html
+++ b/Catalog1.html
@@ -13,6 +13,17 @@
 
     <style>
 
+          footer {
+            text-align: center;
+            padding: 5px;
+            background-color: #abbaba;
+            color: #000;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+          }
+
       .bi {
         vertical-align: -.125em;
         fill: currentColor;
@@ -102,7 +113,7 @@
       <div class="container">
         <a href="#" class="navbar-brand d-flex align-items-center">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-          <strong>Catalog of bread and Cake</strong>
+          <strong>Catalog of Bread and Cake</strong>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -177,6 +188,7 @@
   </div>
 
 </main>
+<footer><p>Authers: Jacob Leary and Aaryamann Dev Sharma</p></footer>
 
 </body>
 </html>
