--- a/Catalog2.html
+++ b/Catalog2.html
@@ -103,7 +103,7 @@
             <ul class="list-unstyled">
               <li><a href="Catalog1.html" class="text-white">Catalog of bread</a></li>
               <li><a href="Catalog2.html" class="text-white">Catalog of cake</a></li>
-              <li><a href="authers.html" class="text-white">Authers</a></li>
+              <li><a href="index.html" class="text-white">Authers</a></li>
             </ul>
           </div>
         </div>
